--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flame_forge2d: ^0.18.2+4
   flame: ^1.23.0
   flame_tiled: 1.21.1
+  flame_audio: ^2.10.6
 
 dev_dependencies:
   flutter_test:
